# MCP

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
config/: settings.yaml
config/domains/: devops.yaml  erp.yaml  hr.yaml  stock_analysis.yaml
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
src/domains/: __init__.py  base.py
src/domains/devops/: __init__.py
src/domains/erp/: __init__.py
src/domains/hr/: __init__.py
src/domains/stock_analysis/: __init__.py
src/mcp_client/: __init__.py  client.py  discovery.py
src/mcp_server/: __init__.py  audit.py  auth.py  main.py  registry.py  router.py
src/orchestrator/: __init__.py  conversation.py  gateway.py  llm.py  main.py
src/shared/: __init__.py  config.py  logging.py  models.py  schema.py
tests/: test_domains.py  test_e2e.py  test_mcp_server.py  test_orchestrator.py
